src/test/deca/context/valid/class/instance/null.deca
// Description:
//    crée un objet null
//
// Resultats:
//    Aucune erreur

class Socrate{

}

{
	Socrate s = null;
	s = null;
}

