src/test/deca/context/invalid/decl_init/init_null.deca
// Description:
//    Déclaration d'un type primitif à null
//
// Resultats:
//    Line 9 : Incompatible type initialization
// 

{
   int a = null;
}
